solucionado cloudinary, correcciones en swagger
