# resources/views/Pet/edit.blade.php
@@ -2,10 +2,12 @@
 
 @section('contenido')
 <div class = "black-rounded-div">
+  
   <h2>EDITAR MASCOTA<h2>
-  <form action="/pets/{{$pet->id}}" method="POST">
-      @csrf
-      @method('PUT')
+  <form action="/pets/{{$pet->id}}" method="POST" enctype="multipart/form-data">
+    @csrf
+    @method('patch')
+    @method('PUT')
     <div class="mb-3">
       <label for="" class="form-label">Name</label>
       <input id="name" name="name" type="text" class="form-control" tabindex="2" value="{{$pet->name}}">
@@ -14,8 +16,10 @@
     <div class="mb-3">
     <label style="color:#ffffff" for="" class="form-label">Sex</label>
       <select id= "sex" name='sex'class="form-select">
-          <option value="female"> Hembra </option>  
-          <option value="male"> Macho </option>  
+          <option value="female" 
+            @if ($pet->sex == 'female') selected @endif>Hembra</option>
+          <option value="male" 
+            @if ($pet->sex == 'male') selected @endif>Macho</option>
       </select>
     </div>
     
@@ -23,7 +27,9 @@
       <label style="color:#ffffff" for="" class="form-label">Categoria</label>
       <select id="id_category" name="id_category" class="form-select">
         @foreach ($categorias as $categoria)
-          <option value="{{ $categoria->id }}">{{ $categoria->name }}</option>
+          <option value="{{ $categoria->id }}" 
+            @if ($categoria->id == $pet->id_category) selected @endif>
+            {{ $categoria->name }}</option>
         @endforeach
       </select>    
     </div>
@@ -32,9 +38,9 @@
       <label>Imagen actual</label>
       <img width="100px;" src="{{ $pet->image }}">
       <br/>
-      <label>Agregar nueva imagen</label>
-      
-      <input type="file" name="imagen" class="form-control">
+      <label>Agregar nueva imagen</label>      
+      <input type="file" id= "image" name="image" class="form-control">
+
     </div>
     <a href="/pets" class="btn btn-secondary" tabindex="5">Cancelar</a>
     <button type="submit" class="btn btn-primary" tabindex="4">Guardar</button>
